# CUBIC-Storage

./: .env.default  .gitignore  Cargo.toml  Dockerfile  Dockerfile-musl  Storage.json  docker-compose.yml  rust-toolchain.toml  start-server
.github/workflows/: release.yml
src/: Metadata.rs  bucket.rs  bucket_get_file.rs  file_location.rs  main.rs  metadata.rs  path.rs  settings.rs
