[package]
name = "cubic_storage"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = "4.8.0"
actix-rt = "2.10.0"
actix-web-actors = "4.3.0"
actix-multipart = "0.7.2"

walkdir = "2.5.0"
sha1 = "0.10.6"

json = "0.12.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.124"

futures = "0.3.30"
env_logger = "0.11.3"
rand = "0.8.5"
tokio = { version = "1.38.1", features = ["fs"]}
dotenv = "0.15.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-futures = "0.2.5"

sled = "0.34.7"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"]}