[package]
name = "cubic_storage"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.11.0"
actix-rt = "2.10.0"
actix-multipart = "=0.7.2"

walkdir = "=2.5.0"
sha1 = "=0.10.6"

serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.141"

futures = "=0.3.31"
env_logger = "=0.11.8"
rand = "=0.9.2"
tokio = { version = "=1.46.1", features = ["fs"]}
dotenv = "=0.15.0"
tracing = { version = "=0.1.41", features = ["log"] }

sled = "=0.34.7"
anyhow = "=1.0.98"
chrono = { version = "=0.4.41", features = ["serde"]}